--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 openai==0.27.2
 openai-summarize==0.1.4
 pdfplumber==0.8.0
+pytube==12.1.3
 requests==2.28.2
 streamlit==1.20.0
 streamlit-chat==0.0.2.2
